Fixed home return links

--- a/login.html
+++ b/login.html
@@ -106,12 +106,12 @@
 										<div class="header-nav-main header-nav-main-text-capitalize header-nav-main-square header-nav-main-dropdown-no-borders header-nav-main-effect-2 header-nav-main-sub-effect-1">
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
-													<li><a href="#overview" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Overview</a></li>
-													<li><a href="#how-it-works" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">How It Work</a></li>
-													<li><a href="#key-features" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Key Features</a></li>
-													<li><a href="#reviews" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Reviews</a></li>
-													<li><a href="#faq" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Faq's</a></li>
-													<li><a href="#downloads" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Downloads</a></li>
+													<li><a href="index.html" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Overview</a></li>
+													<li><a href="index.html#how-it-works" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">How It Work</a></li>
+													<li><a href="index.html#key-features" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Key Features</a></li>
+													<li><a href="index.html#reviews" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Reviews</a></li>
+													<li><a href="index.html#faq" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Faq's</a></li>
+													<li><a href="index.html#downloads" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Downloads</a></li>
 													<li><a href="register.html" class="nav-link active" data-hash data-hash-offset="0" data-hash-offset-lg="70">Register</a></li>
 												</ul>
 											</nav>
