--- a/profile.html
+++ b/profile.html
@@ -148,12 +148,12 @@
 								<div class="d-flex justify-content-center mb-4">
 									<div class="profile-image-outer-container">
 										<div class="profile-image-inner-container bg-color-primary">
-											<img src="img/avatars/avatar.jpg">
+											<img src="img/avatars/avatar.jpg" id="previewImage">
 											<span class="profile-image-button bg-color-dark">
 												<i class="fas fa-camera text-light"></i>
 											</span>
 										</div>
-										<input type="file" id="file" class="form-control profile-image-input">
+										<input type="file" id="file" accept="image/*" class="form-control profile-image-input">
 									</div>
 								</div>
 
